# Parallel-LiNES

./: .gitignore  README.md
prototypes/parallel_slots/: .env.example  README.md  pyproject.toml
prototypes/parallel_slots/parallel_slots/: __init__.py  cli.py  config.py  openai_client.py  router.py  schemas.py
prototypes/parallel_slots/tests/: __init__.py  test_router.py  test_schemas.py
prototypes/parallel_slots/tests/fixtures/: plan_valid.json  slot_output_valid.json
